--- a/index.html
+++ b/index.html
@@ -88,16 +88,14 @@
         di crescere dal punto di vista personale e formativo, per esempio
         attraverso il contatto con clienti e colleghi. Dispongo di un
         buon livello di inglese, di un livello elementare di spagnolo e, dal
-        punto di vista informatico, uso autonomamente il pacchetto office, i
-        social network e la posta elettronica.</p>
+        punto di vista informatico, gestisco autonomamente le funzioni del pacchetto office.</p>
     </div>
     <div class="col-sm-12 col-md-12">
       <h4>Certificati</h4>
       <hr>
-      <p>Sono uscito da un liceo scientifico con opzione scienze applicate
-        (Primo Levi di Bollate, MI) nel 2018 con il voto finale di 68.
-        Durante gli anni del liceo ho seguito un corso di Autocad e uno di
-        sicurezza sul lavoro.
+      <p>Nel 2018 sono uscito da un liceo scientifico con opzione scienze applicate
+        (Primo Levi di Bollate, MI) il quale mi ha permesso di seguire un corso di Autocad e uno di
+        sicurezza sul lavoro ottenendone i certificati di frequenza.
         Dispongo della patente B dal dicembre del 2015 e, nel gennaio 2021, ho
         conseguito il <a href="https://learndigital.withgoogle.com/digitaltraining/validate-certificate-code" target="_blank">
           certificato</a> "Concetti di base del marketing digitale" di Google
