--- a/index-en.html
+++ b/index-en.html
@@ -85,16 +85,14 @@
         the importance of a well and fast work done, and thanks to them I could
         personally and educationally grow up, for example through the contact
         with customers and colleagues. I can speak a middle level English, a basic
-        level Spanish and I can independently use the Windows office pack, social
-        networks and the email box.</p>
+        level Spanish and I can independently use the Windows office pack.</p>
     </div>
     <div class="col-sm-12 col-md-12">
       <h4>Certificates</h4>
       <hr>
-      <p>I attended a scientific high school (Primo Levi in Bollate, Milan) with 68
-        as final mark. During those years I attended an Autocad course and
-        another one about the security in job places. I have the regular driving
-        license from 2015 and I completed the Google <a href="https://learndigital.withgoogle.com/digitaltraining/validate-certificate-code" target="_blank">course</a>
+      <p>I attended a scientific high school (Primo Levi in Bollate, Milan) which gave me the possibility to complete an Autocad course and
+        another one about the security in job places getting their attendance certificates. I have the driving
+        license since 2015 and I completed the Google <a href="https://learndigital.withgoogle.com/digitaltraining/validate-certificate-code" target="_blank">course</a>
         "Basic concepts of digital marketing" in January 2021. (ID: K9W U3Y FDE).</p>
     </div>
     </div>
