--- a/index-en.html
+++ b/index-en.html
@@ -90,7 +90,7 @@
     <div class="col-sm-12 col-md-12">
       <h4>Certificates</h4>
       <hr>
-      <p>I attended a scientific high school (Primo Levi in Bollate, Milan) which gave me the possibility to complete an Autocad course and
+      <p>I attended a scientific high school (Primo Levi in Bollate, near Milan) which gave me the possibility to complete an Autocad course and
         another one about the security in job places getting their attendance certificates. I have the driving
         license since 2015 and I completed the Google <a href="https://learndigital.withgoogle.com/digitaltraining/validate-certificate-code" target="_blank">course</a>
         "Basic concepts of digital marketing" in January 2021. (ID: K9W U3Y FDE).</p>
