--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
     <div class="col-xs-12 col-sm-12 col-md-6">
       <h4>Lavori</h4>
       <hr>
-      <p style="padding-right: 1rem;">Ho lavorato come addetto alle vendite per un importante catena di
+      <p style="padding-right: 1rem;">Ho lavorato come addetto alle vendite per un' importante catena di
         abbigliamento, come cameriere per un ristorante e, per l'attività
-        di alternzanza scuola-lavoro, come assistente nella biblioteca
+        di alternanza scuola-lavoro, come assistente nella biblioteca
         della mia città. Dal punto di vista informatico rimando al mio
         <a href="https://github.com/Francesco-dot" target="_blank">profilo</a> Github nel quale ho caricato il progetto di un forum,
          in Django, dove gli utenti, dopo essersi registrati, possono
-         pubblicare un'aforisma e renderlo visibile agli altri.</p>
+         pubblicare un aforisma e renderlo visibile agli altri.</p>
     </div>
     <div class="col-xs-12 col-sm-12 col-md-6">
       <h4>Competenze</h4>
@@ -93,7 +93,7 @@
     <div class="col-sm-12 col-md-12">
       <h4>Certificati</h4>
       <hr>
-      <p>Nel 2018 sono uscito da un liceo scientifico con opzione scienze applicate
+      <p>Nel 2018 sono mi sono diplomato in un liceo scientifico con opzione scienze applicate
         (Primo Levi di Bollate, MI) il quale mi ha permesso di seguire un corso di Autocad e uno di
         sicurezza sul lavoro ottenendone i certificati di frequenza.
         Dispongo della patente B dal dicembre del 2015 e, nel gennaio 2021, ho
