--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <div class="col-sm-12 col-md-12">
       <h4>Certificati</h4>
       <hr>
-      <p>Nel 2018 sono mi sono diplomato in un liceo scientifico con opzione scienze applicate
+      <p>Nel 2018 mi sono diplomato in un liceo scientifico con opzione scienze applicate
         (Primo Levi di Bollate, MI) il quale mi ha permesso di seguire un corso di Autocad e uno di
         sicurezza sul lavoro ottenendone i certificati di frequenza.
         Dispongo della patente B dal dicembre del 2015 e, nel gennaio 2021, ho
