--- a/index-en.html
+++ b/index-en.html
@@ -48,12 +48,11 @@
     <div class="col-lg-6">
       <h2>Me</h2>
       <hr>
-      <p> I'm Francesco, since 1997, from the hinterland of Milan. I'm a self-taught web development student
-         and I want to make this new hobby as a job in the future. I'm an
-         accurate and unselfish person and I define myself like a timeless
-         positive guy 'cause I always try to see the fine aspects of the things
-         and I’m not easily discouraged. I'm a trip lover, an art lover, an anime
-         lover and I’m rediscovering the pleasure of a good read recently.</p>
+      <p> I'm Francesco, born in 1997, from the hinterland of Milan. I'm a self-taught web development student
+         and I want to make this new hobby my job in the future. I'm an
+         accurate and selfless person and I describe myself like a timeless
+         positive guy because I always see the glass half full and I'm not easily discouraged. 
+        I'm a trip lover, an art enthusiast, I like anime and I’m recently rediscovering the pleasure of a good read.</p>
       <br>
     </div>
     <div class="col-lg-6">
@@ -72,26 +71,25 @@
       <h4>Past Jobs</h4>
       <hr>
       <p style="padding-right: 1rem;">I worked as a shop assistant for a famous
-        retail shop, I worked as a waiter for a restaurant and I worked as an
-        assistant for the library of my city. About my informatic career I suggest
+        retail shop, I have been a waiter in a restaurant and a librarian. If you want to know about my informatic career I suggest
         to check my Github <a href="https://github.com/Francesco-dot" target="_blank">profile</a>
-        where I uploaded a forum project, made with Django, which let users to post
+        where I uploaded a forum project made with Django, which let users post
         quotes to share with others, after the registration.</p>
     </div>
     <div class="col-xs-12 col-sm-12 col-md-6">
       <h4>Skills</h4>
       <hr>
       <p>Thanks to my experiences I could develop several skills, including
-        the importance of a well and fast work done, and thanks to them I could
+        the importance of a well and fast done work. Thanks to them I could
         personally and educationally grow up, for example through the contact
         with customers and colleagues. I can speak a middle level English, a basic
-        level Spanish and I can independently use the Windows office pack.</p>
+        level Spanish and I can independently use the Microsoft office pack.</p>
     </div>
     <div class="col-sm-12 col-md-12">
       <h4>Certificates</h4>
       <hr>
-      <p>I attended the Primo Levi in Bollate, near Milan, scientific high school which gave me the possibility to complete an Autocad course and
-        another one about the security in job places getting their attendance certificates. I have the driving
+      <p>I attended the Primo Levi scientific high school in Bollate, near Milan, which gave me the possibility to complete an Autocad course and 
+        one about the security in workplaces getting their attendance certificates. I have a driving
         license since 2015 and I completed the Google <a href="https://learndigital.withgoogle.com/digitaltraining/validate-certificate-code" target="_blank">course</a>
         "Basic concepts of digital marketing" in January 2021. (ID: K9W U3Y FDE).</p>
     </div>
@@ -106,16 +104,10 @@
       <hr>
     </div>
     <div class="row text-center">
-      <div class="col-xs-12 col-md-6 col-lg-6">
+      <div class="col-xs-12 col-md-12 col-lg-12">
         <a href="https://www.linkedin.com/in/francesco-donolato-660a73188/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
         <br>
         <br>
-      </div>
-      <div class="col-xs-12 col-md-6 col-lg-6">
-        <i class="far fa-envelope"></i>
-        <p class="lead">francesco.donolato2@gmail.com</p>
-      <br>
-      <br>
       </div>
   </div>
 <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
