--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <h2>Me</h2>
       <hr>
       <p> Francesco, classe '97, dalla provincia di Milano. Sono uno studente
-        autodidatta di sviluppo web con l'obiettivo di trasformare questa
+        autodidatta del mondo di internet con l'obiettivo di trasformare questa
         neonata passione in un'occupazione. Sono un tipo preciso, altruista e
         mi definisco come un eterno positivo perchè cerco sempre di vedere
         il bicchiere mezzo pieno e non mi lascio scoraggiare facilmente.
@@ -74,10 +74,10 @@
       <h4>Lavori</h4>
       <hr>
       <p style="padding-right: 1rem;">Ho lavorato come addetto alle vendite per un' importante catena di
-        abbigliamento, come cameriere per un ristorante e, per l'attività
-        di alternanza scuola-lavoro, come assistente nella biblioteca
+        abbigliamento e, per l'attività di alternanza scuola-lavoro, 
+        come assistente nella biblioteca
         della mia città. Dal punto di vista informatico rimando al mio
-        <a href="https://github.com/Francesco-dot" target="_blank">profilo</a> Github nel quale ho caricato il progetto di un forum,
+        <a href="https://github.com/Francesco-dot" target="_blank">profilo</a> Github nel quale ho caricato il progetto di questo sito e quello di un forum,
          in Django, dove gli utenti, dopo essersi registrati, possono
          pubblicare un aforisma e renderlo visibile agli altri.</p>
     </div>
@@ -88,8 +88,8 @@
         tra cui l'importanza di un lavoro fatto bene e in maniera rapida, e
         di crescere dal punto di vista personale e formativo, per esempio
         attraverso il contatto con clienti e colleghi. Dispongo di un
-        buon livello di inglese, di un livello elementare di spagnolo e, dal
-        punto di vista informatico, gestisco autonomamente le funzioni del pacchetto office.</p>
+        buon livello di inglese, di un preparazione elementare di spagnolo e di una 
+        conoscenza base di linguaggi per lo sviluppo web come Python, HTML e CSS.</p>
     </div>
     <div class="col-sm-12 col-md-12">
       <h4>Certificati</h4>
@@ -104,7 +104,7 @@
     </div>
     </div>
   <div class="text-center">
-    <button type="button" class="btn btn-primary btn-xs"><a href="logos/CV_DONOLATO_FRANCESCO.pdf" class="cv" target="_blank">Visualizza il mio CV completo!</a>
+    <button type="button" class="btn btn-primary btn-xs"><a href="logos/CV_DONOLATO_FRANCESCO_1.pdf" class="cv" target="_blank">Visualizza il mio CV completo!</a>
     </button>
   </div>
   <div class="container-fluid welcome text-center">
