--- a/index-en.html
+++ b/index-en.html
@@ -49,7 +49,7 @@
     <div class="col-lg-6">
       <h2>Me</h2>
       <hr>
-      <p> I'm Francesco, born in 1997, from the hinterland of Milan. I'm a self-taught web development student
+      <p> I'm Francesco, born in 1997, from the hinterland of Milan. I'm a self-taught internet stuff student
          and I want to make this new hobby my job in the future. I'm an
          accurate and selfless person and I describe myself like a timeless
          positive guy because I always see the glass half full and I'm not easily discouraged. 
@@ -72,9 +72,9 @@
       <h4>Past Jobs</h4>
       <hr>
       <p style="padding-right: 1rem;">I worked as a shop assistant for a famous
-        retail shop, I have been a waiter in a restaurant and a librarian. If you want to know about my informatic career I suggest
+        retail shop and I have been a librarian for the local library. If you want to know about my informatic career I suggest
         to check my Github <a href="https://github.com/Francesco-dot" target="_blank">profile</a>
-        where I uploaded a forum project made with Django, which let users post
+        where I uploaded the project of this site and one of a forum made with Django, which let users post
         quotes to share with others, after the registration.</p>
     </div>
     <div class="col-xs-12 col-sm-12 col-md-6">
@@ -84,7 +84,7 @@
         the importance of a well and fast done work. Thanks to them I could
         personally and educationally grow up, for example through the contact
         with customers and colleagues. I can speak a middle level English, a basic
-        level Spanish and I can independently use the Microsoft office pack.</p>
+        level Spanish and I can program with Python, HTML and CSS in an elementary way.</p>
     </div>
     <div class="col-sm-12 col-md-12">
       <h4>Certificates</h4>
@@ -96,7 +96,7 @@
     </div>
     </div>
   <div class="text-center">
-    <button type="button" class="btn btn-primary btn-xs"><a href="logos/CV_DONOLATO_FRANCESCO.pdf" class="cv" target="_blank">Check my complete curriculum!<br/>(In Italian)</a>
+    <button type="button" class="btn btn-primary btn-xs"><a href="logos/CV_DONOLATO_FRANCESCO_1.pdf" class="cv" target="_blank">Check my complete curriculum!<br/>(In Italian)</a>
     </button>
   </div>
   <div class="container-fluid welcome text-center">
