--- a/index-en.html
+++ b/index-en.html
@@ -40,7 +40,7 @@
   <div class="row">
     <div class="banner">
       <img src="logos/prova_1_forse6.png" class="img-fluid">
-      <p class="heading" style="font-size: 3vw;">七転び八起き <br> (“Fall down seven times, stand up eight”) <br> -Japanese idiom</p>
+      <p class="heading" style="font-size: 3vw;">七転び八起き <br> (“Fall down seven times, stand up eight”) <br> -Japanese proverb</p>
     </div>
   </div>
 </div>
